--- a/bicingwatch/api/templates/index.html
+++ b/bicingwatch/api/templates/index.html
@@ -3,10 +3,21 @@
 {% block content %}
 <h2>Stations</h2>
 
-<ul>
+<table>
+<tr>
+    <th>Name</th>
+    <th>Number</th>
+    <th>Added</th>
+    <th>Pings</th>
+</tr>
 {% for station in station_list %}
-    <li>{{station.name}} ({{station.number}})</li>
+    <tr>
+        <td>{{station.name}}</td>
+        <td>{{station.number}}</td>
+        <td>{{station.created}}</td>
+        <td><a href="pings/{{station.id}}">pings</a></td>      
+    </tr>
 {% endfor %}
-</ul>
+</table>
 
 {% endblock content %}
