--- a/bicingwatch/api/templates/index.html
+++ b/bicingwatch/api/templates/index.html
@@ -8,14 +8,17 @@
     <th>Name</th>
     <th>Number</th>
     <th>Added</th>
-    <th>Pings</th>
+    <th>Actions</th>
 </tr>
 {% for station in station_list %}
     <tr>
         <td>{{station.name}}</td>
         <td>{{station.number}}</td>
         <td>{{station.created}}</td>
-        <td><a href="pings/{{station.id}}">pings</a></td>      
+        <td>
+            <a href="pings/{{station.id}}">pings</a>      
+            <a href="ping_avg/{{station.id}}">avg</a>
+        </td>      
     </tr>
 {% endfor %}
 </table>
