first flash charts

--- a/bicingwatch/api/templates/base_api.html
+++ b/bicingwatch/api/templates/base_api.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-<title>bicingwatch API</title>
+    <title>bicingwatch API</title>
+    <script type="text/javascript" src="/js/swfobject.js"></script>
 </head>
 <body>
 
