--- a/bicingwatch/api/templates/index.html
+++ b/bicingwatch/api/templates/index.html
@@ -16,8 +16,7 @@
         <td>{{station.number}}</td>
         <td>{{station.created}}</td>
         <td>
-            <a href="pings/{{station.id}}">pings</a>      
-            <a href="ping_avg/{{station.id}}">avg</a>
+            <a href="station/{{station.id}}">info</a>      
         </td>      
     </tr>
 {% endfor %}
