--- a/bicingwatch/api/templates/station.html
+++ b/bicingwatch/api/templates/station.html
@@ -5,6 +5,19 @@
 
 <p>created: {{station.created}}</p>
 
+<h3>Last 24h</h3>
+
+<div id="today"></div>
+<script type="text/javascript">
+swfobject.embedSWF(
+    "/images/open-flash-chart.swf", 
+    "today", 
+    "600", "200", 
+    "9.0.0", 
+    "expressInstall.swf",
+    {"data-file":"../data/ping_today/{{station.id}}"});
+</script>
+
 <h3>Weekday</h3>
 
 <div id="weekday"></div>
@@ -15,7 +28,7 @@ swfobject.embedSWF(
     "600", "200", 
     "9.0.0", 
     "expressInstall.swf",
-    {"data-file":"/data/ping_avg_weekday/{{station.id}}"});
+    {"data-file":"../data/ping_avg_weekday/{{station.id}}"});
 </script>
 
 <h3>Weekend</h3>
@@ -28,7 +41,7 @@ swfobject.embedSWF(
     "600", "200", 
     "9.0.0", 
     "expressInstall.swf",
-    {"data-file":"/data/ping_avg_weekend/{{station.id}}"});
+    {"data-file":"../data/ping_avg_weekend/{{station.id}}"});
 </script>
 
 {% endblock content %}
