--- a/bicingwatch/api/templates/station.html
+++ b/bicingwatch/api/templates/station.html
@@ -5,7 +5,7 @@
 
 <p>created: {{station.created}}</p>
 
-<h3>Last 24h</h3>
+<h3>Today</h3>
 
 <div id="today"></div>
 <script type="text/javascript">
