--- a/bicingwatch/api/templates/station.html
+++ b/bicingwatch/api/templates/station.html
@@ -3,6 +3,8 @@
 {% block content %}
 <h2>Station #{{station.number}} {{station.name}}</h2>
 
+<p>{{station.address}}
+
 <p>created: {{station.created}}</p>
 
 <h3>Today</h3>
