--- a/bicingwatch/api/templates/base_api.html
+++ b/bicingwatch/api/templates/base_api.html
@@ -1,9 +1,16 @@
 <html>
 <head>
     <title>bicingwatch API</title>
+    <link rel="stylesheet" type="text/css" href="/css/bicingwatch.css" />
     <script type="text/javascript" src="/js/swfobject.js"></script>
+    {% block head %}
+    {% endblock head %}
 </head>
-<body>
+<body
+
+{% block bodytags %}
+{% endblock bodytags %}
+>
 
 <h1>bicingwatch API</h1>
 
