--- a/bicingwatch/api/templates/index.html
+++ b/bicingwatch/api/templates/index.html
@@ -7,4 +7,22 @@
 <li><a href="station_map">Map of all stations</a></li>
 </ul>
 
+<div id="disqus_thread"></div><script type="text/javascript" src="http://disqus.com/forums/bicingwatch/embed.js"></script><noscript><a href="http://bicingwatch.disqus.com/?url=ref">View the discussion thread.</a></noscript><a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
+
+<script type="text/javascript">
+//<![CDATA[
+(function() {
+var links = document.getElementsByTagName('a');
+var query = '?';
+for(var i = 0; i < links.length; i++) {
+if(links[i].href.indexOf('#disqus_thread') >= 0) {
+query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&';
+}
+}
+document.write('<script type="text/javascript" src="http://disqus.com/forums/bicingwatch/get_num_replies.js' + query + '"></' + 'script>');
+})();
+//]]>
+</script>
+
+
 {% endblock content %}
