- some style - some more text - default google maps

--- a/bicingwatch/api/templates/index.html
+++ b/bicingwatch/api/templates/index.html
@@ -2,12 +2,53 @@
 
 {% block content %}
 
-<ul>
-<li><a href="station_list">List of all stations</a></li>
-<li><a href="station_map">Map of all stations</a></li>
-</ul>
+<p>
+	This site is used as a test for statistics I am using for my 
+	<a href="http://blog.bicingwatch.com/">bicingwatch blog</a>.
+</p>
 
-<div id="disqus_thread"></div><script type="text/javascript" src="http://disqus.com/forums/bicingwatch/embed.js"></script><noscript><a href="http://bicingwatch.disqus.com/?url=ref">View the discussion thread.</a></noscript><a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
+<p>
+	I am also making the data available as XML, JSON and text. If you are 
+	interested in this give me a shout.
+</p>
+
+<p>
+	The following pages are currently the only useful ones for the general 
+	public.
+</p>
+
+<dl class="menu">
+<dt><a href="station_list">List of all bicing stations</a></dt>
+<dd>
+	A list of all current stations, each entry links to a detail page which 
+	gives information about location and usage statistics of that station
+</dd>
+<dt><a href="station_map">Map of all bicing stations</a></dt>
+<dd>
+	A google map of all the current station, each station links again to the 
+	detail page. The map is also bigger and quicker than the official map on
+	<a href="http://bicing.com/">bicing.com</a>. You might have to zoom all the 
+	way in to see all the stations in one area.
+</dd>
+</dl>
+
+<p>
+	Each page  also contains a disqus comment area, if you like to add more 
+	information or comments to a station or this website.
+</p>
+
+<div id="disqus_thread"></div>
+<script 
+	type="text/javascript" 
+	src="http://disqus.com/forums/bicingwatch/embed.js"></script>
+<noscript>
+	<a href="http://bicingwatch.disqus.com/?url=ref">
+		View the discussion thread.
+	</a>
+</noscript>
+<a href="http://disqus.com" class="dsq-brlink">blog comments powered by 
+	<span class="logo-disqus">Disqus</span>
+</a>
 
 <script type="text/javascript">
 //<![CDATA[
