--- a/bicingwatch/api/templates/base_api.html
+++ b/bicingwatch/api/templates/base_api.html
@@ -12,7 +12,7 @@
 {% endblock bodytags %}
 >
 
-<h1>bicingwatch API</h1>
+<h1><a href="/">bicingwatch API</a></h1>
 
 {% block content %}
 no content ?
