--- a/bicingwatch/site_media/css/bicingwatch.css
+++ b/bicingwatch/site_media/css/bicingwatch.css
@@ -1,35 +1,62 @@
+* {
+	font-family: sans-serif;
+}
+
+h1 {
+	color: lightblue;
+	left: 1em;
+	right: 1em;
+	top: 1em;
+	border: solid 2px lightblue;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	padding: 5px;
+}
+
+h1 a {
+	text-decoration: none;
+	color: lightblue;
+}
 
 .grid {
 	width: 1015px;
 	clear: both;
+	padding-top: 1em;
 }
 
 .grid .area {
 	width: 460px;
 	height: 220px;
 	float: left;
-	margin: 5px;
+	margin: 5px 10px 5px 0;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border: solid 1px lightblue;
 }
 
 .grid .area h3 {
 	padding: 0;
 	margin: 0;
 	height: 20px;
+	text-align: center;
 }
 
 table {
-	border: 1px solid black;
+	border: 1px solid lightblue;
 	border-collapse: collapse;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
 }
 
 th {
-	border-bottom: 2px solid black;
-	border-left: 1px dotted black;
+	border-bottom: 2px solid lightblue;
+	border-left: 1px dotted lightblue;
+	color: blue;
 }
 
 td {
-	border-bottom: 1px solid black;
-	border-left: 1px dotted black;
+	border-bottom: 1px solid lightblue;
+	border-left: 1px dotted lightblue;
 }
 
 #disqus_thread {
