--- a/bicingwatch/api/templates/station.html
+++ b/bicingwatch/api/templates/station.html
@@ -2,117 +2,137 @@
 
 {% block head %}
 
-    <script src="http://maps.google.com/maps?file=api&amp;v=2.147&amp;key=ABQIAAAAAUxgr5RgLev_FqtotvS_oRQfIbdx1koVHH1yoB2ALy11PvexchRJhyyXaNK_xf7XWDEa162h4D78hw"
-            type="text/javascript"></script>
-    <script type="text/javascript">
-        
-    function initialize() {
-      if (GBrowserIsCompatible()) {
-        var map = new GMap2(document.getElementById("map_canvas"));
-        map.setUIToDefault();
+		<script src="http://maps.google.com/maps?file=api&amp;v=2.147&amp;key=ABQIAAAAAUxgr5RgLev_FqtotvS_oRQfIbdx1koVHH1yoB2ALy11PvexchRJhyyXaNK_xf7XWDEa162h4D78hw"
+						type="text/javascript"></script>
+		<script src="/js/markerclusterer_packed.js" type="text/javascript"></script>
+		<script type="text/javascript">
 
-        var point = new GLatLng({{ station.y }}, {{ station.x }});
-        var geoXml = new GGeoXml("http://api.bicingwatch.com/api/kml/all");
+		var stations = {{stations|safe}};
 
-        map.setCenter(point, 15);
-        map.addOverlay(geoXml); 
-      }
-    }
-    
-    </script>
+		function createMarker(station) {
+			var latlng = new GLatLng(station.y, station.x);
+			var marker = new GMarker(latlng);
+
+			GEvent.addListener(marker, 'click', function() {
+				marker.openInfoWindowHtml(
+						'<a href="../station/'+station.id+'">'+
+							station.name+'</a><br/>'+
+							station.address
+				);
+			});
+
+			return marker
+		}
+
+		function initialize() {
+			if (GBrowserIsCompatible()) {
+				var map = new GMap2(document.getElementById("map_canvas"));
+				map.setUIToDefault();
+
+				var markers = [];
+				for (var i=0; i<stations.length; i++) {
+						markers.push(createMarker(stations[i]));
+				}
+				var markerCluster = new MarkerClusterer(map, markers, {
+					maxZoom: 16,
+					gridSize: 50
+				});
+
+				var point = new GLatLng({{station.y}}, {{station.x}});
+
+				map.setCenter(point, 16);
+			}
+		}
+
+		</script>
 
 {% endblock head %}
 
 {% block bodytags %}
-    onload="initialize()" 
-    onunload="GUnload()"
+		onload="initialize()"
+		onunload="GUnload()"
 {% endblock bodytags %}
 
 {% block content %}
 <h2>Station #{{station.number}}</h2>
 
 <table>
-    <tr>
-    	<td>Number</td>
-    	<td>
-    		{{station.number}}
-    		{% if station.numberChecked %}
-    			(verified)
-    		{% else %}
-    			(unverified)
-    		{% endif %}
-    	</td>
-    </tr>
-    <tr><td>Name</td><td>{{station.name}}</td></tr>
-    <tr>
-        <td>Address</td>
-        <td>
-            {{station.address|default:"not set yet"}}
-        </td>
-    </tr>
-    <tr><td>First scraped</td><td>{{station.created}}</td></tr>
-    <tr>
-        <td>Comments</td>
-        <td>
-            <a href="http://api.bicingwatch.com/api/station/{{station.id}}#disqus_thread">View Comments</a>
-        </td>
-    </tr>
+		<tr>
+			<td>Number</td>
+			<td>
+				{{station.number}}
+			</td>
+		</tr>
+		<tr><td>Name</td><td>{{station.name}}</td></tr>
+		<tr>
+				<td>Address</td>
+				<td>
+						{{station.address|default:"not set yet"}}
+				</td>
+		</tr>
+		<tr><td>First scraped</td><td>{{station.created}}</td></tr>
+		<tr>
+				<td>Comments</td>
+				<td>
+						<a href="http://api.bicingwatch.com/api/station/{{station.id}}#disqus_thread">View Comments</a>
+				</td>
+		</tr>
 </table>
 
 
 
 <div class="grid">
-    <div class="area">
-        <h3>Google Map</h3>
-        
-        <div id="map_canvas" style="width: 450px; height: 200px"></div>
-    </div>
+		<div class="area">
+				<h3>Google Map</h3>
 
-    <div class="area">
-        <h3>Today</h3>
+				<div id="map_canvas" style="width: 450px; height: 200px"></div>
+		</div>
 
-        <div id="today"></div>
-        <script type="text/javascript">
-        swfobject.embedSWF(
-            "/images/open-flash-chart.swf", 
-            "today", 
-            "450", "200", 
-            "9.0.0", 
-            "expressInstall.swf",
-            {"data-file":"../data/ping_today/{{station.id}}"});
-        </script>
-    </div>
+		<div class="area">
+				<h3>Today</h3>
 
-    <div class="area">
-        <h3>Weekday</h3>
-        
-        <div id="weekday"></div>
-        <script type="text/javascript">
-        swfobject.embedSWF(
-            "/images/open-flash-chart.swf", 
-            "weekday", 
-            "450", "200", 
-            "9.0.0", 
-            "expressInstall.swf",
-            {"data-file":"../data/ping_avg_weekday/{{station.id}}"});
-        </script>
-    </div>
-        
-    <div class="area">
-        <h3>Weekend</h3>
-        
-        <div id="weekend"></div>
-        <script type="text/javascript">
-        swfobject.embedSWF(
-            "/images/open-flash-chart.swf", 
-            "weekend", 
-            "450", "200", 
-            "9.0.0", 
-            "expressInstall.swf",
-            {"data-file":"../data/ping_avg_weekend/{{station.id}}"});
-        </script>
-    </div>
-</div>    
+				<div id="today"></div>
+				<script type="text/javascript">
+				swfobject.embedSWF(
+						"/images/open-flash-chart.swf",
+						"today",
+						"450", "200",
+						"9.0.0",
+						"expressInstall.swf",
+						{"data-file":"../data/ping_today/{{station.id}}"});
+				</script>
+		</div>
+
+		<div class="area">
+				<h3>Weekday</h3>
+
+				<div id="weekday"></div>
+				<script type="text/javascript">
+				swfobject.embedSWF(
+						"/images/open-flash-chart.swf",
+						"weekday",
+						"450", "200",
+						"9.0.0",
+						"expressInstall.swf",
+						{"data-file":"../data/ping_avg_weekday/{{station.id}}"});
+				</script>
+		</div>
+
+		<div class="area">
+				<h3>Weekend</h3>
+
+				<div id="weekend"></div>
+				<script type="text/javascript">
+				swfobject.embedSWF(
+						"/images/open-flash-chart.swf",
+						"weekend",
+						"450", "200",
+						"9.0.0",
+						"expressInstall.swf",
+						{"data-file":"../data/ping_avg_weekend/{{station.id}}"});
+				</script>
+		</div>
+</div>
 
 <div id="disqus_thread"></div><script type="text/javascript" src="http://disqus.com/forums/bicingwatch/embed.js"></script><noscript><a href="http://bicingwatch.disqus.com/?url=ref">View the discussion thread.</a></noscript><a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
 
