--- a/bicingwatch/api/templates/station_map.html
+++ b/bicingwatch/api/templates/station_map.html
@@ -15,7 +15,7 @@
 
 			GEvent.addListener(marker, 'click', function() {
 				marker.openInfoWindowHtml(
-						'<a href="../station/'+station.id+'">'+
+						'<a href="station/'+station.id+'">'+
 							station.name+'</a><br/>'+
 							station.address
 				);
